# it5012_26_bd_code

./: Dockerfile  README.md
.github/workflows/: docker-image.yml
backend/: .gitignore  README.md  pyproject.toml
backend/app/: admin.py  managers.py  models.py  serializers.py  tests.py  views.py
backend/app/management/commands/: fake_data.py
backend/app/migrations/: 0001_initial.py  0002_alter_account_options_alter_account_managers_and_more.py  0002_grade_assign_date.py  0003_alter_account_managers_delete_administrator.py  0004_remove_course_schedule_alter_student_enrolment_and_more.py
backend/backend/: prod.py  prod_settings.py  settings.py  urls.py
docker/: apache.conf  setup.sh
frontend/: .env  README.md  index.html  package.json  vite.config.js
frontend/public/: manifest.json
frontend/src/: AdminCreates.jsx  AdminEdits.jsx  AdminLists.jsx  AdminResetPassword.jsx  App.jsx  AssignGradesPage.jsx  Layout.jsx  Lists.jsx  Shows.jsx  authProvider.js  dataProvider.js  utils.js
